UX: avoid scroll when it's not neccessary (#38760)
Covering a couple cases where we'd end up with a too-tall page and
scrollbars...

1. When the admin changes banner is present, *it* should add height to
avoid overlapping page content. We don't need this extra padding around
when the banner isn't present. So this is now controlled with a
`.has-admin-changes-banner` class on the body rather than padding
elements before they need it.

2. When the sidebar is in slide-out mode on narrow screens, set the
height of the wrapper to `auto`. Without this, sometimes the layout of
the page would be influenced by the wrapper's height.

3. Relocated a `padding-inline: 0;` that was specifically meant for
full-page chat but was applying to too many places.

--- a/app/assets/stylesheets/common/base/sidebar.scss
+++ b/app/assets/stylesheets/common/base/sidebar.scss
@@ -85,6 +85,11 @@
   align-self: start;
   overflow-y: auto;
 
+  @include viewport.until(md) {
+    // height gets in the way in slide-out mode
+    height: auto;
+  }
+
   // back-compat for themes
   --1dvh: 1dvh;
 
